force-app/main/default/objects/Course__c/fields/Remaining_Places__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Places__c</fullName>
    <formula>Number_of_places__c - (Reserved_Places__c + Confirmed_Places__c + Enquiries__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>