force-app/main/default/objects/Course__c/fields/Reunion_Capacity_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Capacity_PSA_Name__c</fullName>
    <formula>Branch__r.Capacity_PSA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reunion Capacity PSA Name</label>
    <type>Text</type>
</CustomField>