force-app/main/default/objects/Course__c/fields/Reunion_End__c.field-meta.xml
<CustomField>
    <fullName>Reunion_End__c</fullName>
    <label>Reunion End</label>
    <length>10</length>
    <type>Text</type>
</CustomField>