force-app/main/default/objects/Course__c/fields/Reunion_Enquiries_PSA_Email__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Enquiries_PSA_Email__c</fullName>
    <formula>Branch__r.Enquiries_PSA_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reunion Enquiries PSA Email</label>
    <type>Text</type>
</CustomField>