force-app/main/default/objects/Course__c/fields/Reunion_Enquiries_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Enquiries_PSA_Name__c</fullName>
    <formula>Branch__r.Enquiries_PSA__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Reunion Enquiries PSA Name</label>
    <type>Text</type>
</CustomField>