force-app/main/default/objects/Course__c/fields/Reunion_Host_Contact_Names__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Host_Contact_Names__c</fullName>
    <label>Reunion Host Contact Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>