force-app/main/default/objects/Course__c/fields/Reunion_Id__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Id__c</fullName>
    <label>Reunion Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>