force-app/main/default/objects/Course__c/fields/Reunion_Is_Ready_To_Send_Emails__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Is_Ready_To_Send_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reunion Is Ready To Send Emails</label>
    <type>Checkbox</type>
</CustomField>