force-app/main/default/objects/Course__c/fields/Reunion_Practitioner_Email__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Practitioner_Email__c</fullName>
    <label>Reunion Practitioner Email</label>
    <type>Email</type>
</CustomField>