force-app/main/default/objects/Course__c/fields/Reunion_Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Practitioner_Name__c</fullName>
    <label>Reunion Practitioner Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>