force-app/main/default/objects/Course__c/fields/Reunion_Practitioner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Practitioner_Phone__c</fullName>
    <label>Reunion Practitioner Phone</label>
    <type>Phone</type>
</CustomField>