force-app/main/default/objects/Course__c/fields/Reunion_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Session_Date__c</fullName>
    <label>Reunion Session Date</label>
    <type>Date</type>
</CustomField>