force-app/main/default/objects/Course__c/fields/Reunion_Session_Day_Of_Week__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Session_Day_Of_Week__c</fullName>
    <label>Reunion Session Day Of Week</label>
    <length>15</length>
    <type>Text</type>
</CustomField>