force-app/main/default/objects/Course__c/fields/Reunion_Start__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Start__c</fullName>
    <label>Reunion Start</label>
    <length>10</length>
    <type>Text</type>
</CustomField>