force-app/main/default/objects/Course__c/fields/Reunion_Venue_Map_Url__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Venue_Map_Url__c</fullName>
    <label>Reunion Venue Map Url</label>
    <length>255</length>
    <type>Text</type>
</CustomField>