force-app/main/default/objects/Course__c/fields/Reunion_Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Venue_Name__c</fullName>
    <label>Reunion Venue Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>