force-app/main/default/objects/Course__c/fields/Reunion_Venue_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Venue_Postcode__c</fullName>
    <label>Reunion Venue Postcode</label>
    <length>20</length>
    <type>Text</type>
</CustomField>