force-app/main/default/objects/Course__c/fields/Reunion_Venue_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Venue_Street_Address__c</fullName>
    <label>Reunion Venue Street Address</label>
    <type>TextArea</type>
</CustomField>