force-app/main/default/objects/Course__c/fields/Sort_Date__c.field-meta.xml
<CustomField>
    <fullName>Sort_Date__c</fullName>
    <description>Used for CouseAPI</description>
    <formula>IF(TEXT(Type__c) = &#39;Antenatal&#39;, End_Date__c,
    IF(TEXT(Type__c) = &#39;Postnatal&#39;, Start_Date__c,
        IF(TEXT(Type__c) = &#39;Drop In&#39;,  TODAY() + 500,
            TODAY() + 1000 /* Place for adding of other Course types */
        )
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used for CouseAPI</inlineHelpText>
    <label>Sort Date</label>
    <type>Date</type>
</CustomField>