force-app/main/default/objects/Course__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <label>Start Date</label>
    <summarizedField>Session__c.Date__c</summarizedField>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>