force-app/main/default/objects/Course__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <summarizedField>Session__c.Start__c</summarizedField>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>