force-app/main/default/objects/Course__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Total_Confirmed_Scheduled_Session_Hours__c can be used, because in CourseAPI we&apos;re displaying only final courses.
Course can be final, only if all sessions except Reunion are confirmed.</description>
    <formula>&quot;This course consists of &quot; &amp; TEXT(Count_of_Confirmed_Scheduled_Sessions__c) &amp; &quot; session(s) totalling &quot; &amp; IF(Total_Confirmed_Scheduled_Session_Hours__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; TEXT(Total_Confirmed_Scheduled_Session_Hours__c) &amp; &quot; hour(s). &quot; &amp;

IF(Total_Virtual_Support_Hours__c &lt;= 0, &quot;&quot;, BR() &amp; &quot;You will also receive at least &quot; &amp; IF(Total_Virtual_Support_Hours__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; TEXT(Total_Virtual_Support_Hours__c) &amp; &quot; hour(s) of enhanced personalised support from your course leader delivered via a closed messaging group. &quot;) &amp;

IF(Count_of_Unconfirmed_Reunion_Sessions__c &gt; 0,
BR() &amp; $Label.Confirmation_Notification_Course_Reunion,
&quot;&quot;)</formula>
    <inlineHelpText>This field is used for CourseAPI.</inlineHelpText>
    <label>Summary</label>
    <type>Text</type>
</CustomField>