force-app/main/default/objects/Course__c/fields/Surplus_Defecit__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Defecit__c</fullName>
    <formula>Total_Actual_Income__c - Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus \ Defecit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>