force-app/main/default/objects/Course__c/fields/Surplus_Deficit__c.field-meta.xml
<CustomField>
    <fullName>Surplus_Deficit__c</fullName>
    <formula>- Total_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surplus \ Deficit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>