force-app/main/default/objects/Course__c/fields/Target_Group__c.field-meta.xml
<CustomField>
    <fullName>Target_Group__c</fullName>
    <label>Target Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>