force-app/main/default/objects/Course__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <formula>IF(CONTAINS(TEXT(Sub_Type__c), &quot;Twins and Multiples&quot;), &quot;NCT Twins and Multiples workshop for &quot; &amp; Target_Group__c &amp; &quot; due dates&quot;, 
IF(CONTAINS(TEXT(Sub_Type__c), &quot;Waterbirth&quot;), &quot;NCT Waterbirth Workshop for &quot; &amp; Target_Group__c &amp; &quot; due dates&quot;, 
IF(CONTAINS(TEXT(Sub_Type__c), &quot;Early Days&quot;), &quot;NCT Early Days course for babies born in &quot; &amp; Target_Group__c,
IF(CONTAINS(TEXT(Sub_Type__c), &quot;Introducing Solids&quot;), &quot;NCT Introducing Solid Foods workshop for babies born in &quot; &amp; Target_Group__c,
IF(CONTAINS(TEXT(Sub_Type__c), &quot;Baby Massage&quot;), &quot;NCT Baby Massage course for babies from &quot; &amp; Target_Group__c,
 TEXT(Sub_Type__c) &amp; &quot; course for &quot; &amp; Target_Group__c &amp; &quot; due dates&quot;
)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Title</label>
    <type>Text</type>
</CustomField>