force-app/main/default/objects/Course__c/fields/Total_Confirmed_Scheduled_Session_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Confirmed_Scheduled_Session_Hours__c</fullName>
    <label>Total Confirmed Scheduled Session Hours</label>
    <summarizedField>Session__c.Contact_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Session__c.Status__c</field>
        <operation>equals</operation>
        <value>Confirmed</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Scheduled Session</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>