force-app/main/default/objects/Course__c/fields/Total_Contact_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Contact_Hours__c</fullName>
    <label>Total Contact Hours</label>
    <summarizedField>Session__c.Contact_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>