force-app/main/default/objects/Course__c/fields/Total_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Costs__c</fullName>
    <formula>Total_Fees_Claimed__c + Total_Venue_Costs__c + Total_Travel_Costs__c + Total_Other_Costs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>