force-app/main/default/objects/Course__c/fields/Total_Course_Booking_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Course_Booking_Income__c</fullName>
    <formula>Total_Course_Fee_Income__c + Total_Other_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Course Booking Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>