force-app/main/default/objects/Course__c/fields/Total_Estimated_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Estimated_Costs__c</fullName>
    <label>Total Estimated Costs</label>
    <summarizedField>Estimated_Costs__c.Amount__c</summarizedField>
    <summaryForeignKey>Estimated_Costs__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>