force-app/main/default/objects/Course__c/fields/Total_Fees_Claimed__c.field-meta.xml
<CustomField>
    <fullName>Total_Fees_Claimed__c</fullName>
    <label>Total Fees Claimed</label>
    <summarizedField>Session__c.Sum_Of_Purchase_Line_Items__c</summarizedField>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>