force-app/main/default/objects/Course__c/fields/Total_Hours_Of_Virtual_Support__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours_Of_Virtual_Support__c</fullName>
    <label>Total Hours Of Virtual Support</label>
    <summarizedField>Session__c.Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Session__c.Delivery_Type__c</field>
        <operation>equals</operation>
        <value>Virtual Support</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>