force-app/main/default/objects/Course__c/fields/Total_Income_Excluding_Fee_Overrides__c.field-meta.xml
<CustomField>
    <fullName>Total_Income_Excluding_Fee_Overrides__c</fullName>
    <formula>Confirmed_Places__c *  Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Income Excluding Fee Overrides</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>