force-app/main/default/objects/Course__c/fields/Total_Online_Session_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Online_Session_Hours__c</fullName>
    <label>Total Online Session Hours</label>
    <summarizedField>Session__c.Contact_Hours__c</summarizedField>
    <summaryFilterItems>
        <field>Session__c.Delivery_Type__c</field>
        <operation>equals</operation>
        <value>Online</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>