force-app/main/default/objects/Course__c/fields/Total_Other_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Other_Costs__c</fullName>
    <label>Total Other Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>