force-app/main/default/objects/Course__c/fields/Total_Practitioner_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Practitioner_Fees__c</fullName>
    <description>Sum of Practitioner Fees from all associated sessions</description>
    <label>Total Practitioner Fees</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>