force-app/main/default/objects/Course__c/fields/Total_Venue_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Venue_Costs__c</fullName>
    <label>Total Venue Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>