force-app/main/default/objects/Course__c/fields/TotalActualIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalActualIncome__c</fullName>
    <formula>TotalCourseFeeIncome__c + TotalOtherIncome__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Actual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>