force-app/main/default/objects/Course__c/fields/TotalCourseFeeIncome__c.field-meta.xml
<CustomField>
    <fullName>TotalCourseFeeIncome__c</fullName>
    <label>Total Course Fee Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>