force-app/main/default/objects/Course__c/fields/Travel_Cost_Differences__c.field-meta.xml
<CustomField>
    <fullName>Travel_Cost_Differences__c</fullName>
    <formula>Total_Travel_Costs__c -  Estimated_Travel_Costs__c</formula>
    <label>Travel Cost Differences</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>