force-app/main/default/objects/Course__c/fields/Venue_Cost_Differences__c.field-meta.xml
<CustomField>
    <fullName>Venue_Cost_Differences__c</fullName>
    <formula>Total_Venue_Costs__c - Estimated_Venue_Costs__c</formula>
    <label>Venue Cost Differences</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>