force-app/main/default/objects/Course__c/fields/Virtual_Sessions__c.field-meta.xml
<CustomField>
    <fullName>Virtual_Sessions__c</fullName>
    <description>The number of non-physical sessions on the course</description>
    <label>Virtual Sessions</label>
    <summaryFilterItems>
        <field>Session__c.Delivery_Type__c</field>
        <operation>notEqual</operation>
        <value>Physical</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>Session__c.Type__c</field>
        <operation>notEqual</operation>
        <value>Reunion</value>
    </summaryFilterItems>
    <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>