force-app/main/default/objects/Course__c/fields/Website_Text__c.field-meta.xml
<CustomField>
    <fullName>Website_Text__c</fullName>
    <label>Website Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>