force-app/main/default/objects/Course__c/fields/Women_Only__c.field-meta.xml
<CustomField>
    <fullName>Women_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Women Only</label>
    <type>Checkbox</type>
</CustomField>