force-app/main/default/objects/Course__c/validationRules/Cancellation_Reason_Is_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancellation_Reason_Is_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    OR(ISPICKVAL(Status__c, &quot;Cancelling&quot;),
       ISPICKVAL(Status__c, &quot;Cancelling&quot;)),
    ISBLANK(TEXT(Cancellation_Reason__c)) 
)</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Please provide a Cancellation Reason.</errorMessage>
</ValidationRule>