force-app/main/default/objects/Course__c/validationRules/Check_Couples_Allowed_and_Women_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Couples_Allowed_and_Women_Only</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Couples_Allowed__c,  Women_Only__c )</errorConditionFormula>
    <errorMessage>Course cannot be marked as both Couples Allowed and Women Only.</errorMessage>
</ValidationRule>