force-app/main/default/objects/Course__c/validationRules/Check_Course_Status_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Course_Status_field</fullName>
    <active>true</active>
    <description>Prevent user changing Course Status to &#39;Cancelled&#39; if any of Reserved_Places__c, Enquiries__c or Confirmed_Places__c are &gt; 0</description>
    <errorConditionFormula>AND( 
    ISPICKVAL( Status__c , &quot;Cancelled&quot;),
    OR(
       Reserved_Places__c  &gt; 0,
       Enquiries__c &gt; 0,
       Confirmed_Places__c &gt; 0
    )
)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Course cannot be cancelled while there are Enquiries, Reservations or Bookings still in place.</errorMessage>
</ValidationRule>