force-app/main/default/objects/Course__c/validationRules/Check_Fee_and_Estimated_Costs.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Fee_and_Estimated_Costs</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Final&quot;) &amp;&amp;  OR(ISBLANK(Fee__c), Count_of_Estimated_Practitioner_Fees__c &lt; 1, Count_of_Estimated_Travel_Costs__c &lt; 1,  Count_of_Estimated_Venue_Costs__c &lt; 1)</errorConditionFormula>
    <errorMessage>Course requires a Fee and estimated Practitioner, Travel &amp; Venue costs before being marked as final</errorMessage>
</ValidationRule>