force-app/main/default/objects/Course__c/validationRules/Check_Fee_Discount_Uplift_fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Fee_Discount_Uplift_fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
Practitioner_Fee_Discount__c  &lt;&gt; 0,
Practitioner_Fee_Uplift__c  &lt;&gt; 0
)</errorConditionFormula>
    <errorMessage>Please only enter one of Fee Discount or Fee Uplift percentage.</errorMessage>
</ValidationRule>