force-app/main/default/objects/Course__c/validationRules/Check_Sessions_and_Practitioners.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Sessions_and_Practitioners</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(PRIORVALUE(Status__c), &quot;Draft&quot;) &amp;&amp; ISPICKVAL(Status__c, &quot;Final&quot;) &amp;&amp; OR(Not_Confirmed_Sessions__c &gt; 0, Session_Without_Practitioner__c &gt; 0, All_Sessions__c &lt; 1)</errorConditionFormula>
    <errorMessage>Please ensure that all sessions have a practitioner assigned and all non-reunion sessions are confirmed.</errorMessage>
</ValidationRule>