force-app/main/default/objects/Course__c/validationRules/Course_Fee_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Course_Fee_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>Fee__c &lt; 0</errorConditionFormula>
    <errorMessage>Course fee cannot be negative</errorMessage>
</ValidationRule>