force-app/main/default/objects/Course__c/validationRules/Fee_Disc_Uplift_fields_can_not_be_less_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Fee_Disc_Uplift_fields_can_not_be_less_0</fullName>
    <active>true</active>
    <description>Practitioner fee uplift and discount fields should only accept positive values</description>
    <errorConditionFormula>OR(
 Practitioner_Fee_Discount__c &lt; 0, 
 Practitioner_Fee_Uplift__c  &lt; 0
)</errorConditionFormula>
    <errorMessage>Please ensure that the Fee Discount / Fee Uplift percentage is a positive number</errorMessage>
</ValidationRule>