force-app/main/default/objects/Course__c/validationRules/PreventCourseReopen.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventCourseReopen</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT($Permission.Can_Reopen_Courses),
NOT($Permission.Override_Course_Validation),
ISCHANGED(Status__c), 
ISPICKVAL(PRIORVALUE(Status__c), &#39;Closed&#39;)
)</errorConditionFormula>
    <errorMessage>You cannot reopen the course</errorMessage>
</ValidationRule>