force-app/main/default/objects/Course__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Branch__c</columns>
    <columns>PSA_Area__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>