force-app/main/default/objects/Course__c/listViews/Completed.listView-meta.xml
<ListView>
    <fullName>Completed</fullName>
    <columns>PSA_Area__c</columns>
    <columns>NAME</columns>
    <columns>Sub_Type__c</columns>
    <columns>Branch__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Target_Group__c</columns>
    <columns>Main_Practitioner__c</columns>
    <columns>Status__c</columns>
    <columns>Confirmed_Places__c</columns>
    <columns>Reserved_Places__c</columns>
    <columns>Enquiries__c</columns>
    <columns>Remaining_Places__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Final</value>
    </filters>
    <filters>
        <field>End_Date__c</field>
        <operation>lessThan</operation>
        <value>TODAY</value>
    </filters>
    <label>Completed</label>
</ListView>